Practice problems & Remainder Theorem

--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,9 @@
 \documentclass[12pt, a4paper]{article}
+\usepackage[a4paper, total={5.5in, 8in}]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
+\usepackage{hyperref}
+\usepackage{amsmath}
 
 \renewcommand{\baselinestretch}{1.6}
 
@@ -8,3 +11,11 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{formula}{Formula}[section]
 \newtheorem{problem}{Problem}[section]
+\newtheorem{proof}{Proof}[section]
+\hypersetup{
+    colorlinks,
+    citecolor=black,
+    filecolor=black,
+    linkcolor=black,
+    urlcolor=black
+}
