Add Algebraic Manipulations

--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \include{preamble}
 
 \title{\textbf{Math Binder - AMC/AIME}}
-\author{Hansel Grimes}
+\author{Coderinblack}
 
 \begin{document}
   \maketitle
@@ -10,6 +10,8 @@
 
   \newpage
 
-  \include{tex/algebra/polynomials}
+  \include{tex/algebra/polynomials/polynomials}
+  \include{tex/algebra/algebraic-manipulations/algebraic-manipulations}
+  \include{tex/precalculus/complex-numbers}
 
 \end{document}
