--- a/preamble.tex
+++ b/preamble.tex
@@ -4,6 +4,10 @@
 \usepackage[english]{babel}
 \usepackage{hyperref}
 \usepackage{amsmath}
+\usepackage{ulem}
+\DeclareUnicodeCharacter{2212}{-}
+
+\newcommand{\ia}{\textit{Intermediate Algebra, AoPS}}
 
 \renewcommand{\baselinestretch}{1.6}
 
